gccida/g0/check_insn_for_givs
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_insn_for_givs/src/loop.c:5772:1: error: use of undeclared identifier 'induction_1'
induction_1 *v; // [rsp+58h] [rbp-38h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_insn_for_givs/src/loop.c:5772:14: error: use of undeclared identifier 'v'
induction_1 *v; // [rsp+58h] [rbp-38h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_insn_for_givs/src/loop.c:5783:53: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v4 = **( _WORD **)&p[2] == 47 ? (  struct rtx_def *)p[2] : single_set_2( p, *( rtx *)&p[2]); 
                                                    ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_insn_for_givs/src/loop.c:5786:13: error: expected identifier or '('
 struct set = v4; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_insn_for_givs/src/loop.c:5831:1: error: use of undeclared identifier 'v'
v = ( induction_1 *)xmalloc( 0xA8uLL); 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_insn_for_givs/src/loop.c:5831:20: error: expected expression
v = ( induction_1 *)xmalloc( 0xA8uLL); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_insn_for_givs/src/loop.c:5831:7: error: use of undeclared identifier 'induction_1'
v = ( induction_1 *)xmalloc( 0xA8uLL); 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_insn_for_givs/src/loop.c:5841:1: error: use of undeclared identifier 'v'
v, 
^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_insn_for_givs/src/obj/loop.o] Error 1
